More fixes
Fix issue with revision of "TruncateColors" method.
Fix UI animations, device card alignments, lifx beam stuff.

--- a/src/Glimmr/wwwroot/css/glimmr.css
+++ b/src/Glimmr/wwwroot/css/glimmr.css
@@ -107,15 +107,23 @@ div.btn-clear.closeBtn.closeBtn-sm, div.btn-clear.refreshBtn {
 }
 
 .devCard.min {
+    opacity: 0!important;
     width: 0!important;
     height: 0!important;
+    margin: 0!important;
+    padding: 0!important;
+    border: 0!important;
+    max-width: 0!important;    
 }
 
 .devCard.min * {
-    width: 100%!important;
-    height: 100%!important;   
     opacity: 0!important;
-    display: none;
+    width: 0!important;
+    height: 0!important;
+    margin: 0!important;
+    padding: 0!important;
+    border: 0!important;
+    max-width: 0!important;
 }
 
 .card {
@@ -132,17 +140,15 @@ div.btn-clear.closeBtn.closeBtn-sm, div.btn-clear.refreshBtn {
 }
 
 .devCard * {
-    -webkit-transition: all 0.25s ease-in-out 0.5s;
-    -moz-transition: all 0.25s ease-in-out 0.5s;
-    -o-transition: all 0.25s ease-in-out 0.5s;
-    transition: all 0.75s ease-in-out;
+    -webkit-transition: all 0.6s ease-in-out 0.1s;
+    -moz-transition: all 0.6s ease-in-out 0.1s;
+    -o-transition: all 0.6s ease-in-out 0.1s;
+    transition: all 0.6s ease-in-out 0.1s;
 }
 
 .card:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
-
-
 
 .card-1:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -190,6 +196,13 @@ div.btn-clear.closeBtn.closeBtn-sm, div.btn-clear.refreshBtn {
 
 .beamItem {
     border: 1px solid grey;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    position: relative;
+    justify-content: center!important;
+    margin-bottom: 10px !important;
+    padding: 15px;
 }
 
 
@@ -361,13 +374,9 @@ area {
 }
 
 .dragHandle {
-    position: relative;
-    left: -46%;
+    position: absolute;
+    left: 4%;
     top: 50px;
-}
-
-.beamItem {
-    position: relative;
 }
 
 .sector {
